--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
     <div class="tabs">
       <button class="tab-btn active" data-tab="notifications">التنبيهات</button>
       <button class="tab-btn" data-tab="customization">تخصيص التنبيهات</button>
+      <button class="tab-btn" data-tab="proposal">نموذج العرض</button>
       <button class="tab-btn" data-tab="prompts">الأوامر</button>
       <button class="tab-btn" data-tab="settings">الإعدادات</button>
     </div>
@@ -183,32 +184,37 @@
           <label>كلمات البحث (تضمين):</label>
           <input type="text" id="keywordsInclude" placeholder="React, Node, تصميم..."
             style="width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box;">
-          <p class="help-text" style="font-size: 0.75em; color: #666; margin-top: 2px;">افصل بين الكلمات بفاصلة (,)</p>
+          <p class="help-text">الكلمات التي يجب أن تتوفر في عنوان أو وصف المشروع ليظهر لك تنبيه.</p>
         </div>
         <div class="form-group" style="margin-bottom: 15px;">
           <label>كلمات مستبعدة:</label>
           <input type="text" id="keywordsExclude" placeholder="وردبريس, WordPress..."
             style="width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box;">
+          <p class="help-text">سيتم تجاهل أي مشروع يحتوي على هذه الكلمات في عنوانه أو وصفه.</p>
         </div>
         <div class="form-group" style="margin-bottom: 15px;">
           <label>أدنى ميزانية ($):</label>
           <input type="number" id="minBudget" placeholder="مثلاً: 50"
             style="width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box;">
+          <p class="help-text">سيتم تجاهل المشاريع التي ميزانيتها أقل من هذا المبلغ.</p>
         </div>
         <div class="form-group" style="margin-bottom: 15px;">
           <label>أدنى معدل توظيف للعميل (%):</label>
           <input type="number" id="minHiringRate" placeholder="مثلاً: 80"
             style="width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box;">
+          <p class="help-text">الحد الأدنى لنسبة التوظيف لدى صاحب المشروع (مثلاً 80%).</p>
         </div>
         <div class="form-group" style="margin-bottom: 15px;">
           <label>أقصى مدة تنفيذ (يوم):</label>
           <input type="number" id="maxDuration" placeholder="مثلاً: 7"
             style="width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box;">
+          <p class="help-text">أقصى مدة تنفيذ مقبولة للمشروع (بالأيام).</p>
         </div>
         <div class="form-group">
           <label>أدنى عمر لحساب العميل (يوم):</label>
           <input type="number" id="minClientAge" placeholder="مثلاً: 30"
             style="width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box;">
+          <p class="help-text">الحد الأدنى لعمر حساب العميل بالأيام (لتجنب الحسابات الجديدة).</p>
         </div>
       </div>
 
@@ -262,6 +268,34 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <!-- Tab: Proposal Template -->
+    <div class="tab-content" id="proposal">
+      <div class="section">
+        <h2>
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            class="section-icon">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+            <polyline points="14 2 14 8 20 8"></polyline>
+            <line x1="16" y1="13" x2="8" y2="13"></line>
+            <line x1="16" y1="17" x2="8" y2="17"></line>
+            <polyline points="10 9 9 9 8 9"></polyline>
+          </svg>
+          نموذج العرض الافتراضي
+        </h2>
+        <div class="form-group">
+          <label>نص العرض (سيتم تعبئته تلقائياً):</label>
+          <textarea id="proposalTemplate" rows="12" placeholder="اكتب عرضك الافتراضي هنا..."
+            style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; resize: vertical; margin-top: 5px;"></textarea>
+          <p class="help-text">هذا النص سيتم وضعه في صندوق "تفاصيل العرض" عند النقر على "قدّم الآن" في الإشعارات.</p>
+        </div>
+      </div>
+
+      <div class="actions">
+        <button id="saveProposalBtn" class="btn primary full-width">حفظ النموذج</button>
+      </div>
+      <div id="proposalSaved" class="success-message hidden">تم حفظ النموذج بنجاح</div>
     </div>
 
     <!-- Tab: Prompts -->
