--- a/popup.html
+++ b/popup.html
@@ -12,14 +12,19 @@
   <div class="container">
     <!-- Header -->
     <div class="header">
-      <h1>
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-          class="header-icon">
-          <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-          <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-        </svg>
-        منبه مشاريع مستقل
-      </h1>
+      <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+        <h1>
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            class="header-icon">
+            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+          </svg>
+          منبه مشاريع مستقل
+        </h1>
+        <a href="#" id="open-dashboard-btn" style="color: white; font-size: 11px; text-decoration: none; background: rgba(255,255,255,0.2); padding: 4px 8px; border-radius: 4px;">
+          <i class="fa fa-external-link"></i> لوحة التحكم
+        </a>
+      </div>
     </div>
 
     <!-- Tabs -->
