feat: Add styles for the About Us section, Mission section, and dashboard footer.

--- a/dashboard.html
+++ b/dashboard.html
@@ -44,6 +44,10 @@
                     <i class="fas fa-cog"></i>
                     <span>الإعدادات المتقدمة</span>
                 </button>
+                <button class="nav-item" data-tab="about">
+                    <i class="fas fa-info-circle"></i>
+                    <span>من نحن</span>
+                </button>
             </nav>
 
             <div style="margin-top: auto; padding-top: 20px;">
@@ -272,6 +276,85 @@
                     </div>
                 </div>
             </div>
+
+            <!-- About Us Tab -->
+            <div class="tab-container hidden" id="about-tab">
+                <div class="content-header">
+                    <div class="header-title">
+                        <h2>من نحن</h2>
+                        <p>تعرف على الفريق المطور لمشروع Frelancia.</p>
+                    </div>
+                </div>
+
+                <div class="about-grid">
+                    <!-- Elaraby Profile -->
+                    <div class="about-card">
+                        <div class="profile-header">
+                            <div class="profile-avatar elaraby">
+                                <i class="fas fa-code"></i>
+                            </div>
+                            <div class="profile-info">
+                                <h3>Mohammed Ramadan Elaraby</h3>
+                            </div>
+                        </div>
+                        <div class="profile-social">
+                            <a href="https://www.linkedin.com/in/mohammed-ramadan-elaraby-097245242/" target="_blank" class="social-btn linkedin">
+                                <i class="fab fa-linkedin"></i>
+                                LinkedIn
+                            </a>
+                            <a href="https://github.com/Elaraby218" target="_blank" class="social-btn github">
+                                <i class="fab fa-github"></i>
+                                GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- TryOmar Profile -->
+                    <div class="about-card">
+                        <div class="profile-header">
+                            <div class="profile-avatar omar">
+                                <i class="fas fa-rocket"></i>
+                            </div>
+                            <div class="profile-info">
+                                <h3>TryOmar</h3>
+                            </div>
+                        </div>
+                        <div class="profile-social">
+                            <a href="https://www.linkedin.com/in/tryomar/" target="_blank" class="social-btn linkedin">
+                                <i class="fab fa-linkedin"></i>
+                                LinkedIn
+                            </a>
+                            <a href="https://github.com/TryOmar" target="_blank" class="social-btn github">
+                                <i class="fab fa-github"></i>
+                                GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Mission Brief -->
+                <div class="mission-section">
+                    <div class="mission-content">
+                        <i class="fas fa-heart mission-icon"></i>
+                        <h3>هدفنا ورؤيتنا</h3>
+                        <p>لقد قمنا بتطوير هذا الملحق بهدف واحد أساسي: تمكين المستقلين العرب من الوصول إلى الفرص والمشاريع على موقع مستقل بأسرع وقت ممكن. نحن نؤمن أن السرعة والدقة في التقديم هما مفتاح النجاح في عالم العمل الحر، ولذلك سخرنا تقنيات الذكاء الاصطناعي والمراقبة اللحظية لتكون رفيقك الدائم في رحلة نجاحك.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Dashboard Footer -->
+            <footer class="dashboard-footer">
+                <div class="footer-content">
+                    <span class="footer-text">جميع الحقوق محفوظة لـ</span>
+                    <div class="footer-links">
+                        <a href="https://github.com/Elaraby218" target="_blank" class="footer-link">Elaraby</a>
+                        <span class="footer-sep">و</span>
+                        <a href="https://github.com/TryOmar" target="_blank" class="footer-link">TryOmar</a>
+                    </div>
+                    <span class="footer-copy">&copy; 2024</span>
+                </div>
+                <div class="footer-version">v2.0.0 Premium</div>
+            </footer>
 
             <!-- Sticky Save Bar -->
             <div class="sticky-footer">
