Update dashboard page content and layout.

--- a/dashboard.html
+++ b/dashboard.html
@@ -69,7 +69,7 @@
                 <div class="content-header">
                     <div class="header-title">
                         <h2>مرحباً بك، شريك النجاح</h2>
-                        <p>إليك ملخص لنشاط الملحق وآخر المشاريع المرصودة.</p>
+                        <p>إليك ملخص لنشاط الإضافة وآخر المشاريع المرصودة.</p>
                     </div>
                 </div>
 
@@ -203,7 +203,7 @@
                 <div class="content-header">
                     <div class="header-title">
                         <h2>إشعارات تليجرام</h2>
-                        <p>اربط الملحق بحسابك في تليجرام لتصلك التنبيهات أينما كنت.</p>
+                        <p>اربط الإضافة بحسابك في تليجرام لتصلك التنبيهات أينما كنت.</p>
                     </div>
                 </div>
 
@@ -337,7 +337,7 @@
                     <div class="mission-content">
                         <i class="fas fa-heart mission-icon"></i>
                         <h3>هدفنا ورؤيتنا</h3>
-                        <p>لقد قمنا بتطوير هذا الملحق بهدف واحد أساسي: تمكين المستقلين العرب من الوصول إلى الفرص والمشاريع على موقع مستقل بأسرع وقت ممكن. نحن نؤمن أن السرعة والدقة في التقديم هما مفتاح النجاح في عالم العمل الحر، ولذلك سخرنا تقنيات الذكاء الاصطناعي والمراقبة اللحظية لتكون رفيقك الدائم في رحلة نجاحك.</p>
+                        <p>لقد قمنا بتطوير هذه الإضافة بهدف واحد أساسي: تمكين المستقلين العرب من الوصول إلى الفرص والمشاريع على موقع مستقل بأسرع وقت ممكن. نحن نؤمن أن السرعة والدقة في التقديم هما مفتاح النجاح في عالم العمل الحر، ولذلك سخرنا تقنيات الذكاء الاصطناعي والمراقبة اللحظية لتكون رفيقك الدائم في رحلة نجاحك.</p>
                     </div>
                 </div>
             </div>
@@ -351,7 +351,7 @@
                         <span class="footer-sep">و</span>
                         <a href="https://github.com/TryOmar" target="_blank" class="footer-link">TryOmar</a>
                     </div>
-                    <span class="footer-copy">&copy; 2024</span>
+                    <span class="footer-copy">&copy; 2026</span>
                 </div>
                 <div class="footer-version">v2.0.0 Premium</div>
             </footer>
